SubVersion: $Id$

Log:

- 04/10/2007, version 1.1.0: roms
	- adding NSpire support...
	- TiConnect compresses application in TiGroup; does (almost) the same

	- typesXX.c: are icon & desc fields swapped (icon should not be localized)

- 18/09/2007, version 1.0.8: roms
	- added file extension for GRP variables

- 20/06/2007, version 1.0.7: roms
	- replaced malloc/free by g_malloc/g_free
	- slightly modified TigContent structure
	- fixed ti8x_file_write_read (better end of file check)
	- fixed some TI-86 types (Window Settings)
	- fixed names of TI83+/84+/86 types
	- updated to follow some ticonv API changes

- 10/06/2007, version 1.0.6: roms
	- fixed sending of TIG files: set model as TI84P_USB to enable UTF8 conversion
	- fixed TI83 types: WINDW, ZSTO and TAB were missing
	- some functions (tifiles_content_dup_XXX) were present and exported but 
		didn't appear in tifiles.h header

- 16/04/2007, version 1.0.5: kevin
	- requires glib >= 2.6.0 rather than 2.4.0 because libticonv requires
	  it anyway

- 23/02/2007, version 1.0.4: roms
	- enabled i18n

- 08/12/2006, version 1.0.3:
	- added new values to FileClass enumeration (os, app and tib) and 
	added the following convenient functions: 
		tifiles_file_is_os and tifiles_file_is_app.
	- added tifiles_file_test function which was planned for a while.
	- fixed tifiles_file_write_tigroup which deleted the output file!
	- fixed tifiles_file_test (some copy&paste errors)
	- added missing type (TI83_ASM)
	- implemented matching check for TiGroup in tifiles_file_test
	
- 12/11/2006, version 1.0.2:
	- don't check device_type if data_type is TI89_LICENSE, old 89u files 
	use DEVICE_TYPE_73 (kevin)
	
- 21/09/2006, version 1.0.1:
	- fixed miniunz.c and minizip.c trying to include DOS/Win32 headers 
	under OS X (kevin)
	- changed TIEXPORT into TIEXPORT2
	- again, disabled file checksum verification
	
- 17/09/2006, tagged as version 1.0.0: roms
	- added support for TILIBS_DEPRECATED (exports symbols which have 